# BUAA_DS_Util

./: CMakeLists.txt  binary.c  stringUtilsInplace.c
BitFile/: BitFile.c  BitFile.h  CMakeLists.txt
StringUtils/: CMakeLists.txt  StringUtils.c  StringUtils.h
StringUtils/KMP/: CMakeLists.txt  KMP_Search.c  KMP_Search.h
test/BitFile/: CMakeLists.txt  testBitFile.c  testBitFile.out
test/StringUtils/: CMakeLists.txt  StringUtils.out  outputCompare.sh  testStringUtils.c
